turtleart.house.House.scala.error
Erreur de compilation :
House:6: error: value avance is not a member of Unit
  droite(60)avance(100)
            ^